xli/xli_ZIMPL/zimpl.2.04.org/src/mmlparse.output
State 93 conflicts: 1 shift/reduce


Grammar

    0 $accept: stmt $end

    1 stmt: decl_set
    2     | decl_par
    3     | decl_var
    4     | decl_obj
    5     | decl_sub
    6     | decl_sos
    7     | def_numb
    8     | def_strg
    9     | def_set
   10     | exec_do

   11 decl_set: DECLSET NAME ASGN sexpr ';'
   12         | DECLSET NAME '[' idxset ']' ASGN sexpr ';'
   13         | DECLSET NAME '[' idxset ']' ASGN set_entry_list ';'
   14         | DECLSET NAME '[' ']' ASGN set_entry_list ';'

   15 set_entry_list: set_entry
   16               | set_entry_list ',' set_entry
   17               | SUBSETS '(' sexpr ',' cexpr ')'
   18               | POWERSET '(' sexpr ')'

   19 set_entry: tuple sexpr

   20 def_numb: DEFNUMB DEFNAME '(' name_list ')' ASGN cexpr ';'

   21 def_strg: DEFSTRG DEFNAME '(' name_list ')' ASGN cexpr ';'

   22 def_set: DEFSET DEFNAME '(' name_list ')' ASGN sexpr ';'

   23 name_list: NAME
   24          | name_list ',' NAME

   25 decl_par: DECLPAR NAME '[' idxset ']' ASGN cexpr_entry_list par_default ';'
   26         | DECLPAR NAME '[' idxset ']' ASGN cexpr par_default ';'
   27         | DECLPAR NAME ASGN par_singleton ';'

   28 par_singleton: cexpr_entry_list
   29              | cexpr

   30 par_default: /* empty */
   31            | DEFAULT cexpr

   32 decl_var: DECLVAR NAME '[' idxset ']' var_type lower upper priority startval ';'
   33         | DECLVAR NAME '[' idxset ']' BINARY priority startval ';'
   34         | DECLVAR NAME var_type lower upper priority startval ';'
   35         | DECLVAR NAME BINARY priority startval ';'

   36 var_type: /* empty */
   37         | REAL
   38         | INTEGER

   39 lower: /* empty */
   40      | CMP_GE cexpr
   41      | CMP_GE '-' INFTY

   42 upper: /* empty */
   43      | CMP_LE cexpr
   44      | CMP_LE INFTY

   45 priority: /* empty */
   46         | PRIORITY cexpr

   47 startval: /* empty */
   48         | STARTVAL cexpr

   49 cexpr_entry_list: cexpr_entry
   50                 | cexpr_entry_list ',' cexpr_entry
   51                 | read
   52                 | matrix_head matrix_body

   53 cexpr_entry: tuple cexpr

   54 matrix_head: WITH cexpr_list WITH

   55 matrix_body: matrix_head cexpr_list WITH
   56            | matrix_body matrix_head cexpr_list WITH

   57 decl_obj: DECLMIN NAME DO vexpr ';'
   58         | DECLMAX NAME DO vexpr ';'

   59 decl_sub: DECLSUB NAME DO constraint ';'

   60 constraint: vexpr con_type vexpr con_attr_list
   61           | vexpr con_type cexpr con_attr_list
   62           | cexpr con_type vexpr con_attr_list
   63           | cexpr con_type cexpr con_attr_list
   64           | cexpr con_type vexpr CMP_LE cexpr con_attr_list
   65           | cexpr con_type cexpr CMP_LE cexpr con_attr_list
   66           | cexpr con_type vexpr CMP_GE cexpr con_attr_list
   67           | cexpr con_type cexpr CMP_GE cexpr con_attr_list
   68           | FORALL idxset DO constraint
   69           | IF lexpr THEN constraint ELSE constraint END
   70           | VIF vbool THEN vexpr con_type vexpr ELSE vexpr con_type vexpr END
   71           | VIF vbool THEN cexpr con_type vexpr ELSE vexpr con_type vexpr END
   72           | VIF vbool THEN vexpr con_type cexpr ELSE vexpr con_type vexpr END
   73           | VIF vbool THEN vexpr con_type vexpr ELSE cexpr con_type vexpr END
   74           | VIF vbool THEN vexpr con_type vexpr ELSE vexpr con_type cexpr END
   75           | VIF vbool THEN cexpr con_type cexpr ELSE vexpr con_type vexpr END
   76           | VIF vbool THEN cexpr con_type vexpr ELSE cexpr con_type vexpr END
   77           | VIF vbool THEN cexpr con_type vexpr ELSE vexpr con_type cexpr END
   78           | VIF vbool THEN vexpr con_type cexpr ELSE cexpr con_type vexpr END
   79           | VIF vbool THEN vexpr con_type cexpr ELSE vexpr con_type cexpr END
   80           | VIF vbool THEN vexpr con_type vexpr ELSE cexpr con_type cexpr END
   81           | VIF vbool THEN cexpr con_type cexpr ELSE cexpr con_type vexpr END
   82           | VIF vbool THEN cexpr con_type cexpr ELSE vexpr con_type cexpr END
   83           | VIF vbool THEN cexpr con_type vexpr ELSE cexpr con_type cexpr END
   84           | VIF vbool THEN vexpr con_type cexpr ELSE cexpr con_type cexpr END
   85           | VIF vbool THEN cexpr con_type cexpr ELSE cexpr con_type cexpr END
   86           | VIF vbool THEN vexpr con_type vexpr END
   87           | VIF vbool THEN cexpr con_type vexpr END
   88           | VIF vbool THEN vexpr con_type cexpr END
   89           | VIF vbool THEN cexpr con_type cexpr END

   90 vbool: vexpr CMP_NE vexpr
   91      | cexpr CMP_NE vexpr
   92      | vexpr CMP_NE cexpr
   93      | vexpr CMP_EQ vexpr
   94      | cexpr CMP_EQ vexpr
   95      | vexpr CMP_EQ cexpr
   96      | vexpr CMP_LE vexpr
   97      | cexpr CMP_LE vexpr
   98      | vexpr CMP_LE cexpr
   99      | vexpr CMP_GE vexpr
  100      | cexpr CMP_GE vexpr
  101      | vexpr CMP_GE cexpr
  102      | vexpr CMP_LT vexpr
  103      | cexpr CMP_LT vexpr
  104      | vexpr CMP_LT cexpr
  105      | vexpr CMP_GT vexpr
  106      | cexpr CMP_GT vexpr
  107      | vexpr CMP_GT cexpr
  108      | vbool AND vbool
  109      | vbool OR vbool
  110      | vbool XOR vbool
  111      | NOT vbool
  112      | '(' vbool ')'

  113 con_attr_list: /* empty */
  114              | con_attr_list ',' con_attr

  115 con_attr: SCALE
  116         | SEPARATE

  117 con_type: CMP_LE
  118         | CMP_GE
  119         | CMP_EQ

  120 vexpr: vproduct
  121      | vexpr '+' vproduct
  122      | vexpr '-' vproduct
  123      | vexpr '+' cproduct
  124      | vexpr '-' cproduct
  125      | cexpr '+' vproduct
  126      | cexpr '-' vproduct

  127 vproduct: vfactor
  128         | vproduct '*' cfactor
  129         | vproduct '/' cfactor
  130         | cproduct '*' vfactor

  131 vfactor: VARSYM symidx
  132        | '+' vfactor
  133        | '-' vfactor
  134        | VABS '(' vexpr ')'
  135        | SUM idxset DO vproduct
  136        | IF lexpr THEN vexpr ELSE vexpr END
  137        | '(' vexpr ')'

  138 decl_sos: DECLSOS NAME DO soset ';'

  139 soset: sos_type priority DO vexpr
  140      | FORALL idxset DO soset

  141 sos_type: /* empty */
  142         | TYPE1
  143         | TYPE2

  144 exec_do: DO command ';'

  145 command: PRINT cexpr
  146        | PRINT tuple
  147        | PRINT sexpr
  148        | CHECK lexpr
  149        | FORALL idxset DO command

  150 idxset: tuple IN sexpr condition
  151       | sexpr condition

  152 condition: /* empty */
  153          | WITH lexpr

  154 sexpr: SETSYM symidx
  155      | SETDEF '(' cexpr_list ')'
  156      | EMPTY_SET
  157      | '{' cexpr TO cexpr BY cexpr '}'
  158      | '{' cexpr TO cexpr '}'
  159      | '{' cexpr UNTIL cexpr BY cexpr '}'
  160      | '{' cexpr UNTIL cexpr '}'
  161      | UNION idxset DO sexpr
  162      | sexpr UNION sexpr
  163      | sexpr '+' sexpr
  164      | sexpr SYMDIFF sexpr
  165      | sexpr WITHOUT sexpr
  166      | sexpr '-' sexpr
  167      | sexpr CROSS sexpr
  168      | sexpr '*' sexpr
  169      | sexpr INTER sexpr
  170      | INTER idxset DO sexpr
  171      | '(' sexpr ')'
  172      | '{' tuple_list '}'
  173      | '{' cexpr_list '}'
  174      | '{' idxset '}'
  175      | '{' idxset DO cexpr '}'
  176      | '{' idxset DO tuple '}'
  177      | PROJ '(' sexpr ',' tuple ')'
  178      | INDEXSET '(' SETSYM ')'
  179      | IF lexpr THEN sexpr ELSE sexpr END

  180 read: READ cexpr AS cexpr
  181     | read read_par

  182 read_par: SKIP cexpr
  183         | USE cexpr
  184         | COMMENT cexpr

  185 tuple_list: tuple
  186           | tuple_list ',' tuple
  187           | read

  188 lexpr: cexpr CMP_EQ cexpr
  189      | cexpr CMP_NE cexpr
  190      | cexpr CMP_GT cexpr
  191      | cexpr CMP_GE cexpr
  192      | cexpr CMP_LT cexpr
  193      | cexpr CMP_LE cexpr
  194      | sexpr CMP_EQ sexpr
  195      | sexpr CMP_NE sexpr
  196      | sexpr CMP_GT sexpr
  197      | sexpr CMP_GE sexpr
  198      | sexpr CMP_LT sexpr
  199      | sexpr CMP_LE sexpr
  200      | lexpr AND lexpr
  201      | lexpr OR lexpr
  202      | lexpr XOR lexpr
  203      | NOT lexpr
  204      | '(' lexpr ')'
  205      | tuple IN sexpr
  206      | EXISTS '(' idxset ')'

  207 tuple: EMPTY_TUPLE
  208      | CMP_LT cexpr_list CMP_GT

  209 symidx: /* empty */
  210       | '[' cexpr_list ']'

  211 cexpr_list: cexpr
  212           | cexpr_list ',' cexpr

  213 cexpr: cproduct
  214      | cexpr '+' cproduct
  215      | cexpr '-' cproduct

  216 cproduct: cfactor
  217         | cproduct '*' cfactor
  218         | cproduct '/' cfactor
  219         | cproduct MOD cfactor
  220         | cproduct DIV cfactor
  221         | cproduct POW cfactor

  222 cfactor: NUMB
  223        | STRG
  224        | NAME
  225        | NUMBSYM symidx
  226        | STRGSYM symidx
  227        | NUMBDEF '(' cexpr_list ')'
  228        | STRGDEF '(' cexpr_list ')'
  229        | cfactor FAC
  230        | CARD '(' sexpr ')'
  231        | ABS '(' cexpr ')'
  232        | SGN '(' cexpr ')'
  233        | FLOOR '(' cexpr ')'
  234        | CEIL '(' cexpr ')'
  235        | LOG '(' cexpr ')'
  236        | LN '(' cexpr ')'
  237        | EXP '(' cexpr ')'
  238        | SQRT '(' cexpr ')'
  239        | '+' cfactor
  240        | '-' cfactor
  241        | '(' cexpr ')'
  242        | RANDOM '(' cexpr ',' cexpr ')'
  243        | IF lexpr THEN cexpr ELSE cexpr END
  244        | MIN idxset DO cproduct
  245        | MAX idxset DO cproduct
  246        | SUM idxset DO cproduct
  247        | MIN '(' cexpr_list ')'
  248        | MAX '(' cexpr_list ')'
  249        | ORD '(' sexpr ',' cexpr ',' cexpr ')'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 17 18 20 21 22 112 134 137 155 171 177 178 204 206 227 228
    230 231 232 233 234 235 236 237 238 241 242 247 248 249
')' (41) 17 18 20 21 22 112 134 137 155 171 177 178 204 206 227 228
    230 231 232 233 234 235 236 237 238 241 242 247 248 249
'*' (42) 128 130 168 217
'+' (43) 121 123 125 132 163 214 239
',' (44) 16 17 24 50 114 177 186 212 242 249
'-' (45) 41 122 124 126 133 166 215 240
'/' (47) 129 218
';' (59) 11 12 13 14 20 21 22 25 26 27 32 33 34 35 57 58 59 138 144
'[' (91) 12 13 14 25 26 32 33 210
']' (93) 12 13 14 25 26 32 33 210
'{' (123) 157 158 159 160 172 173 174 175 176
'}' (125) 157 158 159 160 172 173 174 175 176
error (256)
DECLSET (258) 11 12 13 14
DECLPAR (259) 25 26 27
DECLVAR (260) 32 33 34 35
DECLMIN (261) 57
DECLMAX (262) 58
DECLSUB (263) 59
DECLSOS (264) 138
DEFNUMB (265) 20
DEFSTRG (266) 21
DEFSET (267) 22
PRINT (268) 145 146 147
CHECK (269) 148
BINARY (270) 33 35
INTEGER (271) 38
REAL (272) 37
ASGN (273) 11 12 13 14 20 21 22 25 26 27
DO (274) 57 58 59 68 135 138 139 140 144 149 161 170 175 176 244 245
    246
WITH (275) 54 55 56 153
IN (276) 150 205
TO (277) 157 158
UNTIL (278) 159 160
BY (279) 157 159
FORALL (280) 68 140 149
EMPTY_TUPLE (281) 207
EMPTY_SET (282) 156
EXISTS (283) 206
PRIORITY (284) 46
STARTVAL (285) 48
DEFAULT (286) 31
CMP_LE (287) 43 44 64 65 96 97 98 117 193 199
CMP_GE (288) 40 41 66 67 99 100 101 118 191 197
CMP_EQ (289) 93 94 95 119 188 194
CMP_LT (290) 102 103 104 192 198 208
CMP_GT (291) 105 106 107 190 196 208
CMP_NE (292) 90 91 92 189 195
INFTY (293) 41 44
AND (294) 108 200
OR (295) 109 201
XOR (296) 110 202
NOT (297) 111 203
SUM (298) 135 246
MIN (299) 244 247
MAX (300) 245 248
IF (301) 69 136 179 243
THEN (302) 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87
    88 89 136 179 243
ELSE (303) 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 136 179
    243
END (304) 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87
    88 89 136 179 243
INTER (305) 169 170
UNION (306) 161 162
CROSS (307) 167
SYMDIFF (308) 164
WITHOUT (309) 165
PROJ (310) 177
MOD (311) 219
DIV (312) 220
POW (313) 221
FAC (314) 229
CARD (315) 230
ABS (316) 231
SGN (317) 232
FLOOR (318) 233
CEIL (319) 234
LOG (320) 235
LN (321) 236
EXP (322) 237
SQRT (323) 238
RANDOM (324) 242
ORD (325) 249
READ (326) 180
AS (327) 180
SKIP (328) 182
USE (329) 183
COMMENT (330) 184
SUBSETS (331) 17
INDEXSET (332) 178
POWERSET (333) 18
VIF (334) 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88
    89
VABS (335) 134
TYPE1 (336) 142
TYPE2 (337) 143
NUMBSYM (338) 225
STRGSYM (339) 226
VARSYM (340) 131
SETSYM (341) 154 178
NUMBDEF (342) 227
STRGDEF (343) 228
SETDEF (344) 155
DEFNAME (345) 20 21 22
NAME (346) 11 12 13 14 23 24 25 26 27 32 33 34 35 57 58 59 138 224
STRG (347) 223
NUMB (348) 222
SCALE (349) 115
SEPARATE (350) 116


Nonterminals, with rules where they appear

$accept (108)
    on left: 0
stmt (109)
    on left: 1 2 3 4 5 6 7 8 9 10, on right: 0
decl_set (110)
    on left: 11 12 13 14, on right: 1
set_entry_list (111)
    on left: 15 16 17 18, on right: 13 14 16
set_entry (112)
    on left: 19, on right: 15 16
def_numb (113)
    on left: 20, on right: 7
def_strg (114)
    on left: 21, on right: 8
def_set (115)
    on left: 22, on right: 9
name_list (116)
    on left: 23 24, on right: 20 21 22 24
decl_par (117)
    on left: 25 26 27, on right: 2
par_singleton (118)
    on left: 28 29, on right: 27
par_default (119)
    on left: 30 31, on right: 25 26
decl_var (120)
    on left: 32 33 34 35, on right: 3
var_type (121)
    on left: 36 37 38, on right: 32 34
lower (122)
    on left: 39 40 41, on right: 32 34
upper (123)
    on left: 42 43 44, on right: 32 34
priority (124)
    on left: 45 46, on right: 32 33 34 35 139
startval (125)
    on left: 47 48, on right: 32 33 34 35
cexpr_entry_list (126)
    on left: 49 50 51 52, on right: 25 28 50
cexpr_entry (127)
    on left: 53, on right: 49 50
matrix_head (128)
    on left: 54, on right: 52 55 56
matrix_body (129)
    on left: 55 56, on right: 52 56
decl_obj (130)
    on left: 57 58, on right: 4
decl_sub (131)
    on left: 59, on right: 5
constraint (132)
    on left: 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77
    78 79 80 81 82 83 84 85 86 87 88 89, on right: 59 68 69
vbool (133)
    on left: 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105
    106 107 108 109 110 111 112, on right: 70 71 72 73 74 75 76 77
    78 79 80 81 82 83 84 85 86 87 88 89 108 109 110 111 112
con_attr_list (134)
    on left: 113 114, on right: 60 61 62 63 64 65 66 67 114
con_attr (135)
    on left: 115 116, on right: 114
con_type (136)
    on left: 117 118 119, on right: 60 61 62 63 64 65 66 67 70 71 72
    73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89
vexpr (137)
    on left: 120 121 122 123 124 125 126, on right: 57 58 60 61 62
    64 66 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 86 87 88 90
    91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 121
    122 123 124 134 136 137 139
vproduct (138)
    on left: 127 128 129 130, on right: 120 121 122 125 126 128 129
    135
vfactor (139)
    on left: 131 132 133 134 135 136 137, on right: 127 130 132 133
decl_sos (140)
    on left: 138, on right: 6
soset (141)
    on left: 139 140, on right: 138 140
sos_type (142)
    on left: 141 142 143, on right: 139
exec_do (143)
    on left: 144, on right: 10
command (144)
    on left: 145 146 147 148 149, on right: 144 149
idxset (145)
    on left: 150 151, on right: 12 13 25 26 32 33 68 135 140 149 161
    170 174 175 176 206 244 245 246
condition (146)
    on left: 152 153, on right: 150 151
sexpr (147)
    on left: 154 155 156 157 158 159 160 161 162 163 164 165 166 167
    168 169 170 171 172 173 174 175 176 177 178 179,
    on right: 11 12 17 18 19 22 147 150 151 161 162 163 164 165 166
    167 168 169 170 171 177 179 194 195 196 197 198 199 205 230 249
read (148)
    on left: 180 181, on right: 51 181 187
read_par (149)
    on left: 182 183 184, on right: 181
tuple_list (150)
    on left: 185 186 187, on right: 172 186
lexpr (151)
    on left: 188 189 190 191 192 193 194 195 196 197 198 199 200 201
    202 203 204 205 206, on right: 69 136 148 153 179 200 201 202 203
    204 243
tuple (152)
    on left: 207 208, on right: 19 53 146 150 176 177 185 186 205
symidx (153)
    on left: 209 210, on right: 131 154 225 226
cexpr_list (154)
    on left: 211 212, on right: 54 55 56 155 173 208 210 212 227 228
    247 248
cexpr (155)
    on left: 213 214 215, on right: 17 20 21 26 29 31 40 43 46 48 53
    61 62 63 64 65 66 67 71 72 73 74 75 76 77 78 79 80 81 82 83 84
    85 87 88 89 91 92 94 95 97 98 100 101 103 104 106 107 125 126 145
    157 158 159 160 175 180 182 183 184 188 189 190 191 192 193 211
    212 214 215 231 232 233 234 235 236 237 238 241 242 243 249
cproduct (156)
    on left: 216 217 218 219 220 221, on right: 123 124 130 213 214
    215 217 218 219 220 221 244 245 246
cfactor (157)
    on left: 222 223 224 225 226 227 228 229 230 231 232 233 234 235
    236 237 238 239 240 241 242 243 244 245 246 247 248 249,
    on right: 128 129 216 217 218 219 220 221 229 239 240


state 0

    0 $accept: . stmt $end

    DECLSET  shift, and go to state 1
    DECLPAR  shift, and go to state 2
    DECLVAR  shift, and go to state 3
    DECLMIN  shift, and go to state 4
    DECLMAX  shift, and go to state 5
    DECLSUB  shift, and go to state 6
    DECLSOS  shift, and go to state 7
    DEFNUMB  shift, and go to state 8
    DEFSTRG  shift, and go to state 9
    DEFSET   shift, and go to state 10
    DO       shift, and go to state 11

    stmt      go to state 12
    decl_set  go to state 13
    def_numb  go to state 14
    def_strg  go to state 15
    def_set   go to state 16
    decl_par  go to state 17
    decl_var  go to state 18
    decl_obj  go to state 19
    decl_sub  go to state 20
    decl_sos  go to state 21
    exec_do   go to state 22


state 1

   11 decl_set: DECLSET . NAME ASGN sexpr ';'
   12         | DECLSET . NAME '[' idxset ']' ASGN sexpr ';'
   13         | DECLSET . NAME '[' idxset ']' ASGN set_entry_list ';'
   14         | DECLSET . NAME '[' ']' ASGN set_entry_list ';'

    NAME  shift, and go to state 23


state 2

   25 decl_par: DECLPAR . NAME '[' idxset ']' ASGN cexpr_entry_list par_default ';'
   26         | DECLPAR . NAME '[' idxset ']' ASGN cexpr par_default ';'
   27         | DECLPAR . NAME ASGN par_singleton ';'

    NAME  shift, and go to state 24


state 3

   32 decl_var: DECLVAR . NAME '[' idxset ']' var_type lower upper priority startval ';'
   33         | DECLVAR . NAME '[' idxset ']' BINARY priority startval ';'
   34         | DECLVAR . NAME var_type lower upper priority startval ';'
   35         | DECLVAR . NAME BINARY priority startval ';'

    NAME  shift, and go to state 25


state 4

   57 decl_obj: DECLMIN . NAME DO vexpr ';'

    NAME  shift, and go to state 26


state 5

   58 decl_obj: DECLMAX . NAME DO vexpr ';'

    NAME  shift, and go to state 27


state 6

   59 decl_sub: DECLSUB . NAME DO constraint ';'

    NAME  shift, and go to state 28


state 7

  138 decl_sos: DECLSOS . NAME DO soset ';'

    NAME  shift, and go to state 29


state 8

   20 def_numb: DEFNUMB . DEFNAME '(' name_list ')' ASGN cexpr ';'

    DEFNAME  shift, and go to state 30


state 9

   21 def_strg: DEFSTRG . DEFNAME '(' name_list ')' ASGN cexpr ';'

    DEFNAME  shift, and go to state 31


state 10

   22 def_set: DEFSET . DEFNAME '(' name_list ')' ASGN sexpr ';'

    DEFNAME  shift, and go to state 32


state 11

  144 exec_do: DO . command ';'

    PRINT   shift, and go to state 33
    CHECK   shift, and go to state 34
    FORALL  shift, and go to state 35

    command  go to state 36


state 12

    0 $accept: stmt . $end

    $end  shift, and go to state 37


state 13

    1 stmt: decl_set .

    $default  reduce using rule 1 (stmt)


state 14

    7 stmt: def_numb .

    $default  reduce using rule 7 (stmt)


state 15

    8 stmt: def_strg .

    $default  reduce using rule 8 (stmt)


state 16

    9 stmt: def_set .

    $default  reduce using rule 9 (stmt)


state 17

    2 stmt: decl_par .

    $default  reduce using rule 2 (stmt)


state 18

    3 stmt: decl_var .

    $default  reduce using rule 3 (stmt)


state 19

    4 stmt: decl_obj .

    $default  reduce using rule 4 (stmt)


state 20

    5 stmt: decl_sub .

    $default  reduce using rule 5 (stmt)


state 21

    6 stmt: decl_sos .

    $default  reduce using rule 6 (stmt)


state 22

   10 stmt: exec_do .

    $default  reduce using rule 10 (stmt)


state 23

   11 decl_set: DECLSET NAME . ASGN sexpr ';'
   12         | DECLSET NAME . '[' idxset ']' ASGN sexpr ';'
   13         | DECLSET NAME . '[' idxset ']' ASGN set_entry_list ';'
   14         | DECLSET NAME . '[' ']' ASGN set_entry_list ';'

    ASGN  shift, and go to state 38
    '['   shift, and go to state 39


state 24

   25 decl_par: DECLPAR NAME . '[' idxset ']' ASGN cexpr_entry_list par_default ';'
   26         | DECLPAR NAME . '[' idxset ']' ASGN cexpr par_default ';'
   27         | DECLPAR NAME . ASGN par_singleton ';'

    ASGN  shift, and go to state 40
    '['   shift, and go to state 41


state 25

   32 decl_var: DECLVAR NAME . '[' idxset ']' var_type lower upper priority startval ';'
   33         | DECLVAR NAME . '[' idxset ']' BINARY priority startval ';'
   34         | DECLVAR NAME . var_type lower upper priority startval ';'
   35         | DECLVAR NAME . BINARY priority startval ';'

    BINARY   shift, and go to state 42
    INTEGER  shift, and go to state 43
    REAL     shift, and go to state 44
    '['      shift, and go to state 45

    $default  reduce using rule 36 (var_type)

    var_type  go to state 46


state 26

   57 decl_obj: DECLMIN NAME . DO vexpr ';'

    DO  shift, and go to state 47


state 27

   58 decl_obj: DECLMAX NAME . DO vexpr ';'

    DO  shift, and go to state 48


state 28

   59 decl_sub: DECLSUB NAME . DO constraint ';'

    DO  shift, and go to state 49


state 29

  138 decl_sos: DECLSOS NAME . DO soset ';'

    DO  shift, and go to state 50


state 30

   20 def_numb: DEFNUMB DEFNAME . '(' name_list ')' ASGN cexpr ';'

    '('  shift, and go to state 51


state 31

   21 def_strg: DEFSTRG DEFNAME . '(' name_list ')' ASGN cexpr ';'

    '('  shift, and go to state 52


state 32

   22 def_set: DEFSET DEFNAME . '(' name_list ')' ASGN sexpr ';'

    '('  shift, and go to state 53


state 33

  145 command: PRINT . cexpr
  146        | PRINT . tuple
  147        | PRINT . sexpr

    EMPTY_TUPLE  shift, and go to state 54
    EMPTY_SET    shift, and go to state 55
    CMP_LT       shift, and go to state 56
    SUM          shift, and go to state 57
    MIN          shift, and go to state 58
    MAX          shift, and go to state 59
    IF           shift, and go to state 60
    INTER        shift, and go to state 61
    UNION        shift, and go to state 62
    PROJ         shift, and go to state 63
    CARD         shift, and go to state 64
    ABS          shift, and go to state 65
    SGN          shift, and go to state 66
    FLOOR        shift, and go to state 67
    CEIL         shift, and go to state 68
    LOG          shift, and go to state 69
    LN           shift, and go to state 70
    EXP          shift, and go to state 71
    SQRT         shift, and go to state 72
    RANDOM       shift, and go to state 73
    ORD          shift, and go to state 74
    INDEXSET     shift, and go to state 75
    NUMBSYM      shift, and go to state 76
    STRGSYM      shift, and go to state 77
    SETSYM       shift, and go to state 78
    NUMBDEF      shift, and go to state 79
    STRGDEF      shift, and go to state 80
    SETDEF       shift, and go to state 81
    NAME         shift, and go to state 82
    STRG         shift, and go to state 83
    NUMB         shift, and go to state 84
    '('          shift, and go to state 85
    '+'          shift, and go to state 86
    '-'          shift, and go to state 87
    '{'          shift, and go to state 88

    sexpr     go to state 89
    tuple     go to state 90
    cexpr     go to state 91
    cproduct  go to state 92
    cfactor   go to state 93


state 34

  148 command: CHECK . lexpr

    EMPTY_TUPLE  shift, and go to state 54
    EMPTY_SET    shift, and go to state 55
    EXISTS       shift, and go to state 94
    CMP_LT       shift, and go to state 56
    NOT          shift, and go to state 95
    SUM          shift, and go to state 57
    MIN          shift, and go to state 58
    MAX          shift, and go to state 59
    IF           shift, and go to state 60
    INTER        shift, and go to state 61
    UNION        shift, and go to state 62
    PROJ         shift, and go to state 63
    CARD         shift, and go to state 64
    ABS          shift, and go to state 65
    SGN          shift, and go to state 66
    FLOOR        shift, and go to state 67
    CEIL         shift, and go to state 68
    LOG          shift, and go to state 69
    LN           shift, and go to state 70
    EXP          shift, and go to state 71
    SQRT         shift, and go to state 72
    RANDOM       shift, and go to state 73
    ORD          shift, and go to state 74
    INDEXSET     shift, and go to state 75
    NUMBSYM      shift, and go to state 76
    STRGSYM      shift, and go to state 77
    SETSYM       shift, and go to state 78
    NUMBDEF      shift, and go to state 79
    STRGDEF      shift, and go to state 80
    SETDEF       shift, and go to state 81
    NAME         shift, and go to state 82
    STRG         shift, and go to state 83
    NUMB         shift, and go to state 84
    '('          shift, and go to state 96
    '+'          shift, and go to state 86
    '-'          shift, and go to state 87
    '{'          shift, and go to state 88

    sexpr     go to state 97
    lexpr     go to state 98
    tuple     go to state 99
    cexpr     go to state 100
    cproduct  go to state 92
    cfactor   go to state 93


state 35

  149 command: FORALL . idxset DO command

    EMPTY_TUPLE  shift, and go to state 54
    EMPTY_SET    shift, and go to state 55
    CMP_LT       shift, and go to state 56
    IF           shift, and go to state 101
    INTER        shift, and go to state 61
    UNION        shift, and go to state 62
    PROJ         shift, and go to state 63
    INDEXSET     shift, and go to state 75
    SETSYM       shift, and go to state 78
    SETDEF       shift, and go to state 81
    '('          shift, and go to state 102
    '{'          shift, and go to state 88

    idxset  go to state 103
    sexpr   go to state 104
    tuple   go to state 105


state 36

  144 exec_do: DO command . ';'

    ';'  shift, and go to state 106


state 37

    0 $accept: stmt $end .

    $default  accept


state 38

   11 decl_set: DECLSET NAME ASGN . sexpr ';'

    EMPTY_SET  shift, and go to state 55
    IF         shift, and go to state 101
    INTER      shift, and go to state 61
    UNION      shift, and go to state 62
    PROJ       shift, and go to state 63
    INDEXSET   shift, and go to state 75
    SETSYM     shift, and go to state 78
    SETDEF     shift, and go to state 81
    '('        shift, and go to state 102
    '{'        shift, and go to state 88

    sexpr  go to state 107


state 39

   12 decl_set: DECLSET NAME '[' . idxset ']' ASGN sexpr ';'
   13         | DECLSET NAME '[' . idxset ']' ASGN set_entry_list ';'
   14         | DECLSET NAME '[' . ']' ASGN set_entry_list ';'

    EMPTY_TUPLE  shift, and go to state 54
    EMPTY_SET    shift, and go to state 55
    CMP_LT       shift, and go to state 56
    IF           shift, and go to state 101
    INTER        shift, and go to state 61
    UNION        shift, and go to state 62
    PROJ         shift, and go to state 63
    INDEXSET     shift, and go to state 75
    SETSYM       shift, and go to state 78
    SETDEF       shift, and go to state 81
    '('          shift, and go to state 102
    ']'          shift, and go to state 108
    '{'          shift, and go to state 88

    idxset  go to state 109
    sexpr   go to state 104
    tuple   go to state 105


state 40

   27 decl_par: DECLPAR NAME ASGN . par_singleton ';'

    WITH         shift, and go to state 110
    EMPTY_TUPLE  shift, and go to state 54
    CMP_LT       shift, and go to state 56
    SUM          shift, and go to state 57
    MIN          shift, and go to state 58
    MAX          shift, and go to state 59
    IF           shift, and go to state 111
    CARD         shift, and go to state 64
    ABS          shift, and go to state 65
    SGN          shift, and go to state 66
    FLOOR        shift, and go to state 67
    CEIL         shift, and go to state 68
    LOG          shift, and go to state 69
    LN           shift, and go to state 70
    EXP          shift, and go to state 71
    SQRT         shift, and go to state 72
    RANDOM       shift, and go to state 73
    ORD          shift, and go to state 74
    READ         shift, and go to state 112
    NUMBSYM      shift, and go to state 76
    STRGSYM      shift, and go to state 77
    NUMBDEF      shift, and go to state 79
    STRGDEF      shift, and go to state 80
    NAME         shift, and go to state 82
    STRG         shift, and go to state 83
    NUMB         shift, and go to state 84
    '('          shift, and go to state 113
    '+'          shift, and go to state 86
    '-'          shift, and go to state 87

    par_singleton     go to state 114
    cexpr_entry_list  go to state 115
    cexpr_entry       go to state 116
    matrix_head       go to state 117
    read              go to state 118
    tuple             go to state 119
    cexpr             go to state 120
    cproduct          go to state 92
    cfactor           go to state 93


state 41

   25 decl_par: DECLPAR NAME '[' . idxset ']' ASGN cexpr_entry_list par_default ';'
   26         | DECLPAR NAME '[' . idxset ']' ASGN cexpr par_default ';'

    EMPTY_TUPLE  shift, and go to state 54
    EMPTY_SET    shift, and go to state 55
    CMP_LT       shift, and go to state 56
    IF           shift, and go to state 101
    INTER        shift, and go to state 61
    UNION        shift, and go to state 62
    PROJ         shift, and go to state 63
    INDEXSET     shift, and go to state 75
    SETSYM       shift, and go to state 78
    SETDEF       shift, and go to state 81
    '('          shift, and go to state 102
    '{'          shift, and go to state 88

    idxset  go to state 121
    sexpr   go to state 104
    tuple   go to state 105


state 42

   35 decl_var: DECLVAR NAME BINARY . priority startval ';'

    PRIORITY  shift, and go to state 122

    $default  reduce using rule 45 (priority)

    priority  go to state 123


state 43

   38 var_type: INTEGER .

    $default  reduce using rule 38 (var_type)


state 44

   37 var_type: REAL .

    $default  reduce using rule 37 (var_type)


state 45
